# trello-reporter

./: .gitignore  Makefile  Pipfile  README.md  build.sh  mailer.py  main.py  pylintrc  pyproject.toml  reporter.py  requirements.txt  trello.py  trelloclient.py
